[gd_scene load_steps=3 format=3 uid="uid://wahmcdrd0doi"]

[ext_resource type="Theme" uid="uid://cofl3hfjim0cj" path="res://scenes/header/header.tres" id="1_qhn28"]
[ext_resource type="Script" path="res://scenes/header/header.gd" id="2_k4txv"]

[node name="header" type="PanelContainer"]
custom_minimum_size = Vector2(0, 32)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme = ExtResource("1_qhn28")
script = ExtResource("2_k4txv")

[node name="buttons" type="HBoxContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_qhn28")
theme_override_constants/separation = 0

[node name="new_button" type="Button" parent="buttons"]
layout_mode = 2
theme = ExtResource("1_qhn28")
text = "Neu"

[node name="open_button" type="Button" parent="buttons"]
layout_mode = 2
theme = ExtResource("1_qhn28")
text = "Öffnen"

[node name="complete_button" type="Button" parent="buttons"]
layout_mode = 2
theme = ExtResource("1_qhn28")
text = "Fertigstellen"

[node name="shortcuts_button" type="Button" parent="buttons"]
layout_mode = 2
theme = ExtResource("1_qhn28")
text = "Kürzel"

[node name="customers_button" type="Button" parent="buttons"]
layout_mode = 2
theme = ExtResource("1_qhn28")
text = "Kunden"

[connection signal="pressed" from="buttons/new_button" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="buttons/open_button" to="." method="_on_open_button_pressed"]
[connection signal="pressed" from="buttons/complete_button" to="." method="_on_complete_button_pressed"]
[connection signal="pressed" from="buttons/shortcuts_button" to="." method="_on_shortcuts_button_pressed"]
[connection signal="pressed" from="buttons/customers_button" to="." method="_on_customers_button_pressed"]
